<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="awesome.team.perapera.ViewScreamActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="250dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/shit"
        android:src="@drawable/ic_communication_chat" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/title" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:adjustViewBounds="false"
        android:contentDescription="@string/play_description"
        android:cropToPadding="false"
        android:src="@drawable/play_selector"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="35dp"
        android:layout_above="@+id/list_screams"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="11dp"
        android:layout_toStartOf="@+id/listen_button" />

    <ListView
        android:id="@+id/list_screams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listen_button"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/listen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/start_listening_button" />

    <ImageButton
        android:id="@+id/record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton"
        android:layout_below="@+id/list_screams"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/imageButton"
        android:contentDescription="@string/start_recording_button"
        android:scaleType="fitCenter"
        android:src="@drawable/scream_selector"
        android:text="@string/start_recording_button" />

    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title"
        android:layout_below="@+id/list_screams"
        android:enabled="false"
        android:text="@string/post_button" />

</RelativeLayout>
