<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scream_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScreamActivity$ScreamFragment">

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ImageButton
        android:id="@+id/scream_button"
        android:contentDescription="@string/start_recording_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/scream_selector" />

    <Button
        android:id="@+id/listen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:text="@string/start_listening_button" />

    <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
     to prevent the dummy from receiving focus again -->
    <EditText
        android:id="@+id/editTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listen_button"
        android:layout_alignEnd="@+id/submit_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:inputType="textCapWords"
        android:nextFocusLeft="@id/editTags"
        android:nextFocusUp="@id/editTags"
        android:hint="@string/edit_tags_field"/>
    <!-- TODO android:imeOptions="actionSend" -->

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/listen_button"
        android:enabled="false"
        android:text="@string/submit_button" />

</RelativeLayout>
