<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="awesome.team.perapera.DiscoverActivity.DiscoverFragment">

    <Button
        android:id="@+id/discover_random_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/random_button" />

    <Button
        android:id="@+id/discover_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/discover_random_button"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:text="@string/next_button" />

    <Button
        android:id="@+id/discover_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/discover_random_button"
        android:layout_alignTop="@+id/discover_next_button"
        android:enabled="false"
        android:nestedScrollingEnabled="false"
        android:text="@string/replyButton" />
</RelativeLayout>